testdata/baselines/reference/submodule/conformance/topLevelAwait.1(module=system,target=es2015).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
index.ts(2,1): error TS1378: Top-level 'await' expressions are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
index.ts(46,3): error TS1378: Top-level 'await' expressions are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
other.ts(7,14): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
other.ts(9,5): error TS1432: Top-level 'for await' loops are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
other.ts(9,26): error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== index.ts (2 errors) ====
    export const x = 1;
    await x;
    ~~~~~
!!! error TS1378: Top-level 'await' expressions are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
    
    // reparse element access as await
    await [x];
    await [x, x];
    
    // reparse call as await
    declare function f(): number;
    await (x);
    await (f(), x);
    await <number>(x);
    await <number>(f(), x);
    
    // reparse tagged template as await
    await ``;
    await <string> ``;
    
    // member names should be ok
    class C1 {
        await() {}
    }
    class C2 {
        get await() { return 1; }
        set await(value) { }
    }
    class C3 {
        await = 1;
    }
    ({
        await() {}
    });
    ({
        get await() { return 1 },
        set await(value) { }
    });
    ({
        await: 1
    });
    
    // property access name should be ok
    C1.prototype.await;
    
    // await in decorators
    declare const dec: any;
    @(await dec)
      ~~~~~
!!! error TS1378: Top-level 'await' expressions are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
    class C {
    }
    
    // await allowed in aliased import
    import { await as _await } from "./other";
    
    // newlines
    // await in throw
    throw await
        1;
    
    // await in var
    let y = await
        1;
    
    // await in expression statement;
    await
        1;
    
==== other.ts (3 errors) ====
    const _await = 1;
    
    // await allowed in aliased export
    export { _await as await };
    
    // for-await-of
    const arr = [Promise.resolve()];
                 ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    
    for await (const item of arr) {
        ~~~~~
!!! error TS1432: Top-level 'for await' loops are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
                             ~~~
!!! error TS2504: Type '{}' must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
      item;
    }
    